# antiwasm

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  lexer.cpp
includes/: const.hpp  displayer.hpp  driver.hpp  expression_parser.hpp  header.hpp  init.hpp  instruction.hpp  lexems.hpp  limits.hpp  logger.hpp  logging_levels.hpp  memsec.hpp  memtype.hpp  module.hpp  module_parser.hpp  reftype.hpp  scanner.hpp  section.hpp  section_index.hpp  tablesec.hpp  tabletype.hpp  types_parser.hpp  val_type.hpp  wasm_utils.hpp
init/: init.cpp
instructions/: block.hpp  blocktype.cpp  blocktype.hpp  const.cpp  const.hpp  end.cpp  end.hpp  errorInstr.cpp  errorInstr.hpp  expression.cpp  expression.hpp  expression_parser.cpp  expression_parser.hpp  instruction.cpp  instruction.hpp  lexems.hpp  nop.cpp  nop.hpp  unreachable.cpp  unreachable.hpp
modules/: codesec.cpp  codesec.hpp  contentBlock.cpp  contentBlock.hpp  datasec.cpp  datasec.hpp  elemsec.cpp  elemsec.hpp  exportsec.cpp  exportsec.hpp  funcsec.cpp  funcsec.hpp  globalsec.cpp  globalsec.hpp  header.cpp  header.hpp  importsec.cpp  importsec.hpp  memsec.cpp  memsec.hpp  module.cpp  module.hpp  section.cpp  section.hpp  sectionHeader.hpp  tablesec.cpp  tablesec.hpp  typesec.cpp  typesec.hpp
scanner/: instruction_parser.cpp  instruction_parser.hpp  module_parser.cpp  module_parser.hpp  scanner.cpp  scanner.hpp  section_parser.cpp  section_parser.hpp
src/: const.cpp  displayer.cpp  driver.cpp  driver.hpp  expressionParser.cpp  expression_parser.cpp  header.cpp  header.hpp  init.cpp  lexems.hpp  limits.cpp  limits.hpp  logger.cpp  memsec.cpp  (+14 more)
test/: CMakeLists.txt  boost_test_manager.cpp  driver_test.cpp  error_manager_test.cpp  error_test.cpp  functype_test.cpp  globaltype_test.cpp  header_test.cpp  importDesc_test.cpp  import_test.cpp  importsec_test.cpp  leb128_test.cpp  limits_test.cpp  logger_test.cpp  memsec_test.cpp  memtype_test.cpp  module_parser_test.cpp  module_test.cpp  mut_test.cpp  namespaceParser_test.cpp  numtype_test.cpp  reftype_test.cpp  resulttype_test.cpp  scanner_test.cpp  section_parser_test.cpp  section_test.cpp  tablesec_test.cpp  tabletype_test.cpp  typesec_test.cpp  valtype_test.cpp  wasm_utils_test.cpp
test/files/: 00-empty.wasm  basic-module.wasm
test/instructions/: blocktype_test.cpp  errorInstr_test.cpp  expression_test.cpp
test/modules/: codesec_test.cpp  codesec_test.hpp  datasec_test.cpp  datasec_test.hpp  elemsec_test.cpp  elemsec_test.hpp  exportsec_test.cpp  exportsec_test.hpp  funcsec_test.cpp  funcsec_test.hpp  globalsec_test.cpp  globalsec_test.hpp  importsec_test.cpp  importsec_test.hpp  memsec_test.cpp  memsec_test.hpp  tablesec_test.cpp  tablesec_test.hpp  typesec_test.cpp  typesec_test.hpp
test/scanner/: instruction_parser_test.cpp  section_parser_test.cpp
test/types/: code_test.cpp  code_test.hpp  data_test.cpp  data_test.hpp  element_test.cpp  element_test.hpp  export_test.cpp  export_test.hpp  func_test.cpp  func_test.hpp  functype_test.cpp  functype_test.hpp  global_test.cpp  global_test.hpp  globaltype_test.cpp  globaltype_test.hpp  import_test.cpp  import_test.hpp  limits_test.cpp  limits_test.hpp  locals_test.cpp  locals_test.hpp  memarg_test.cpp  memtype_test.cpp  memtype_test.hpp  mut_test.cpp  mut_test.hpp  numtype_test.cpp  numtype_test.hpp  reftype_test.cpp  reftype_test.hpp  resulttype_test.cpp  resulttype_test.hpp  tabletype_test.cpp  tabletype_test.hpp  valtype_test.cpp  valtype_test.hpp
test/utils/: bytevec_test.cpp  displayer_test.cpp  driver_test.cpp  error_manager_test.cpp  float_parser_test.cpp  leb128_test.cpp  nameParser_test.cpp
(+200 files in other folders)
